Reduce usage of third-party libraries (#1400)
* Reduce usage of third-party libraries

* undo changes to GitBranchSpecifierColumn